[package]
name = "openxiino_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
html_editor = "0.6.1"
ebdimage-rs = {git = "https://github.com/nicl83/ebdimage-rs"}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
serde = "1.0.188"
axum-macros = "0.3.8"
reqwest = "0.11.20"
